results/SVCOMP/specgen/log-assert3-2024_02_24_04_36_28.txt
class assert3 {

  //@ ensures \nothing;
  public static void func() {
    int i = Verifier.nondetInt();

    if (i >= 1000)
      if (!(i > 1000))
        assert false;
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:3: error: incompatible types: <none> cannot be converted to boolean
  //@ ensures \nothing;
              ^
/home/max/Documents/JMLGPT/tmp/assert3.java:5: error: cannot find symbol
    int i = Verifier.nondetInt();
            ^
  symbol:   variable Verifier
  location: class assert3
2 errors

class assert3 {

  //@ ensures true;
  public static void func() {
    int i = (int) (Math.random() * 2000);

    if (i >= 1000)
      if (!(i > 1000))
        assert false;
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:9: verify: The prover cannot establish an assertion (Assert) in method func
        assert false;
        ^
1 verification failure

class assert3 {

  //@ ensures true;
  public static void func() {
    int i = (int) (Math.random() * 2000);

    if (i >= 1000)
      if (!(i > 1000))
        assert false : "Assertion failed: i is not greater than 1000";
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:9: verify: The prover cannot establish an assertion (Assert) in method func: Assertion failed: i is not greater than 1000
        assert false : "Assertion failed: i is not greater than 1000";
        ^
1 verification failure

class assert3 {

  //@ ensures true;
  public static void func() {
    int i = (int) (Math.random() * 2000);

    if (i >= 1000)
      if (!(i > 1000))
        assert false : "i is not greater than 1000";
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:9: verify: The prover cannot establish an assertion (Assert) in method func: i is not greater than 1000
        assert false : "i is not greater than 1000";
        ^
1 verification failure

class assert3 {

  //@ ensures true;
  public static void func() {
    int i = (int) (Math.random() * 2000);

    if (i >= 1000)
      if (!(i > 1000))
        assert false : "Assertion failed: i is not greater than 1000";
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:9: verify: The prover cannot establish an assertion (Assert) in method func: Assertion failed: i is not greater than 1000
        assert false : "Assertion failed: i is not greater than 1000";
        ^
1 verification failure

class assert3 {

  //@ ensures true;
  public static void func() {
    int i = (int) (Math.random() * 2000);

    if (i >= 1000)
      if (!(i > 1000))
        assert false : "Assertion failed: i is not greater than 1000";
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:9: verify: The prover cannot establish an assertion (Assert) in method func: Assertion failed: i is not greater than 1000
        assert false : "Assertion failed: i is not greater than 1000";
        ^
1 verification failure

class assert3 {

  //@ ensures true;
  public static void func() {
    int i = (int) (Math.random() * 2000);

    if (i >= 1000)
      if (!(i > 1000))
        assert false : "Assertion failed: i is not greater than 1000";
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:9: verify: The prover cannot establish an assertion (Assert) in method func: Assertion failed: i is not greater than 1000
        assert false : "Assertion failed: i is not greater than 1000";
        ^
1 verification failure

class assert3 {

  //@ ensures true;
  public static void func() {
    int i = (int) (Math.random() * 2000);

    if (i >= 1000)
      if (!(i > 1000))
        assert false : "Assertion failed: i is not greater than 1000";
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:9: verify: The prover cannot establish an assertion (Assert) in method func: Assertion failed: i is not greater than 1000
        assert false : "Assertion failed: i is not greater than 1000";
        ^
1 verification failure

class assert3 {

  //@ ensures true;
  public static void func() {
    int i = (int) (Math.random() * 2000);

    if (i >= 1000)
      if (!(i > 1000))
        assert false : "Assertion failed: i is not greater than 1000";
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:9: verify: The prover cannot establish an assertion (Assert) in method func: Assertion failed: i is not greater than 1000
        assert false : "Assertion failed: i is not greater than 1000";
        ^
1 verification failure

class assert3 {

  //@ ensures true;
  public static void func() {
    int i = (int) (Math.random() * 2000);

    if (i >= 1000)
      if (!(i > 1000))
        assert false : "Assertion failed: i is not greater than 1000";
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:9: verify: The prover cannot establish an assertion (Assert) in method func: Assertion failed: i is not greater than 1000
        assert false : "Assertion failed: i is not greater than 1000";
        ^
1 verification failure

